--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /TankFlanker/.vs/FPS_n2/v15
+/TankFlanker/x64/Release
