--- a/TankFlanker/TankFlanker/TankFlanker.vcxproj
+++ b/TankFlanker/TankFlanker/TankFlanker.vcxproj
@@ -102,11 +102,11 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="HostPass.hpp" />
     <ClInclude Include="map.hpp" />
     <ClInclude Include="route.hpp" />
+    <ClInclude Include="scene.hpp" />
     <ClInclude Include="sub.hpp" />
-    <ClInclude Include="UI.hpp" />
+    <ClInclude Include="ui.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
