--- a/TankFlanker/TankFlanker/TankFlanker.vcxproj.filters
+++ b/TankFlanker/TankFlanker/TankFlanker.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="ui.hpp">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="chara.hpp">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
