--- a/TankFlanker/TankFlanker/TankFlanker.vcxproj
+++ b/TankFlanker/TankFlanker/TankFlanker.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="chara.hpp" />
     <ClInclude Include="map.hpp" />
     <ClInclude Include="route.hpp" />
     <ClInclude Include="scene.hpp" />
