--- a/TankFlanker/TankFlanker/TankFlanker.vcxproj.filters
+++ b/TankFlanker/TankFlanker/TankFlanker.vcxproj.filters
@@ -38,5 +38,11 @@
     <ClInclude Include="chara.hpp">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Header.hpp">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Enums.hpp">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
