--- a/TankFlanker/TankFlanker/TankFlanker.vcxproj.filters
+++ b/TankFlanker/TankFlanker/TankFlanker.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="Enums.hpp">
       <Filter>ソース ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Ptr_common.hpp">
+      <Filter>ソース ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
